--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.12.2",
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
+    "mongodb": "~1.4.34",
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
