--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "express": "~4.12.2",
+    "fs": "0.0.2",
+    "fs-extra": "^0.18.2",
     "jade": "~1.9.2",
-    "morgan": "~1.5.1",
+    "line-reader": "^0.2.4",
     "mongodb": "~1.4.34",
+    "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
