--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "bootstrap": "~3.3.1",
     "jquery": "~2.1.3",
     "font-awesome": "4.2.0",
-    "flot":""
+    "flot":"",
+    "moment":""
   }
 }
